[gd_scene load_steps=3 format=3 uid="uid://equipment_slot"]

[ext_resource type="Script" path="res://scenes/exploration/ui/components/equipment_slot.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.3, 1)

[node name="EquipmentSlot" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="SlotLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Weapon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1
